# taller-backend

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/api/v1/: main_router.py
app/api/v1/auth/: employees.py  handler.py  roles.py  router.py
app/api/v1/routers/: users.py
app/config/: database.py
app/core/: exceptions.py  settings.py
app/database/: query_builder.py  query_manager.py  seeder.py  seeder_query.py
app/modules/auth/employees/: service.py
app/modules/auth/roles/: service.py
app/schemas/: auth.py  employees.py  responses.py  shared.py
app/utils/: serializers.py
